--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -24,7 +24,10 @@ title: Hacker News Kansai
                         <li><a href="mailto:hnkansai@gmail.com">Contact</a></li>
                     </ul>
                 <div class="social pull-right">
-                   social icons
+                  <li class = 'social-icon'><%= link_to image_tag('facebook.png'), 'http://facebook.com/hnkansai' %></li>
+                  <li class = 'social-icon'><%= link_to image_tag('twitter.png'), 'http://twitter.com/hnkansai' %></li>
+                  <li class = 'social-icon'><%= link_to image_tag('flickr.png'), 'http://flickr.com/hnkansai' %></li>
+                  <li class = 'social-icon'><%= link_to image_tag('youtube.png'), 'http://youtube.com/hnkansai' %></li>
                 </div>
             </div>
         </div>
@@ -79,7 +82,7 @@ title: Hacker News Kansai
   </section>
 
   <section id = "organizers">
-    <div class = "container-fluid no-padding">
+    <div class = "container">
       <div id = "row-fluid">
       <h2>Organizers</h2>
       <span id = "Sacha" class = "organizer">
