Minor CSS updates

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -17,8 +17,8 @@ title: Hacker News Kansai
          <div id = "navbar" class="navbar navbar-inverse" data-spy="affix">
             <div class="navbar-inner">
                 <div class="container">
-                    <a class="brand" href="#">HN Kansai</a>
                     <ul class="nav">
+                        <li><a href="#">Home</a></li>
                         <li><a href="#photos">Photos</a></li>
                         <li><a href="#videos">Videos</a></li>
                         <li><a href="mailto:hnkansai@gmail.com">Contact</a></li>
