--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -27,7 +27,7 @@ title: Hacker News Kansai
                   <li class = 'social-icon'><%= link_to image_tag('facebook.png'), 'http://facebook.com/hnkansai' %></li>
                   <li class = 'social-icon'><%= link_to image_tag('twitter.png'), 'http://twitter.com/hnkansai' %></li>
                   <li class = 'social-icon'><%= link_to image_tag('flickr.png'), 'http://flickr.com/hnkansai' %></li>
-                  <li class = 'social-icon'><%= link_to image_tag('youtube.png'), 'http://youtube.com/hnkansai' %></li>
+                  <li class = 'social-icon'><%= link_to image_tag('youtube.png'), 'http://www.youtube.com/channel/UCbxKJC9zZJ9C7YDYuZ3m59Q' %></li>
                 </div>
             </div>
         </div>
