Fix image alignment or galleries and organizers

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,7 +3,7 @@ title: Hacker News Kansai
 ---
   <section id = "intro">
     <div class = "container">
-      <div class = "row-fluid">
+      <div class = "row">
         <span id="logo" class = "span4">
           <%= image_tag 'hn-logo.png', :width => '300', :class => 'logo'%>
         </span>
@@ -35,14 +35,14 @@ title: Hacker News Kansai
   </section>
   <section id = "welcome">
     <div class = "container">
-      <div class = "row-fluid">
+      <div class = "row">
         <span id = "about" class = "span6 offset3">
             <p>
               HNKansai is a meetup based around <%= link_to 'Hacker News', 'http://news.ycombinator.com' %>.
               Every month, we get together in Kyoto, Osaka, or Kobe to talk about technology, design, games, and startups. Come join us!
             </p>
         </span>
-        <div class = "row-fluid">
+        <div class = "row">
           <span id="newsletter" class = "span6 offset3">
               <p> Sign up to be notified about upcoming events and other news.</p>
               <!-- Begin MailChimp Signup Form -->
@@ -64,7 +64,7 @@ title: Hacker News Kansai
 
     <section id = "videos">
     <div class = "container">
-      <div class = "row-fluid">
+      <div class = "row">
          <h2>Videos</h2>
           <div id="player">
           </div>
@@ -74,7 +74,7 @@ title: Hacker News Kansai
 
   <section id = "photos">
     <div class = "container">
-      <div class = "row-fluid">
+      <div class = "row">
         <h2> Photos </h2>
         <div id = "galleries">
       </div>
@@ -83,9 +83,9 @@ title: Hacker News Kansai
 
   <section id = "organizers">
     <div class = "container">
-      <div id = "row-fluid">
+      <div class = "row">
       <h2>Organizers</h2>
-      <span id = "Sacha" class = "organizer">
+      <span id = "sacha" class = "organizer">
         <%= image_tag 'sacha.jpg', :class => 'profile-pic'  %>
         <div class = "caption">
           <h3>Sacha Greif </h3>
@@ -93,14 +93,14 @@ title: Hacker News Kansai
         </div>
       </span>
 
-      <span id = "Raphael" class = "organizer">
+      <span id = "raphael" class = "organizer">
         <%= image_tag 'raphael.jpg', :class => 'profile-pic'  %>
        <div class = "caption">
           <h3>Raphael Guyot </h3>
         </div>
       </span>
       
-      <span id ="Paco" class = "organizer">
+      <span id ="paco" class = "organizer">
         <%= image_tag 'paco.jpg', :class => 'profile-pic'  %>
         <div class = "caption">
           <h3>Francisco 'Paco' Alcantara</h3>
