--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,7 +1,7 @@
 ---
 title: Hacker News Kansai
 ---
-  <section id = "intro">
+  <section id = "header">
     <div class = "container">
       <div class = "row">
         <span id="logo" class = "span4">
@@ -110,5 +110,8 @@ title: Hacker News Kansai
     </div>
   </section>
  
+  <section id = "footer">
+
+  </section>
 
 </div>
