--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -91,6 +91,7 @@ body {
 section {
   float:left;
   width:100%;
+  position:relative;
   clear:both;
   padding-top:1em;
   padding-bottom:1em;
@@ -384,4 +385,12 @@ text-align:center
 
 #created {
   padding-top:.5em;
+}
+
+.sqs-wrapper {
+  position:fixed !important;
+}
+
+.sqs-center{
+  top:5% !important;
 }
