--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -28,6 +28,10 @@
   min-width:940px;
 }
 
+#nav #language, #nav .container {
+      display:inline-block;
+    }
+
 .navbar .nav li a {
   padding-top:12px;
 }
