--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,57 +1,31 @@
 ---
 title: Hacker News Kansai
 ---
-  <section id = "header">
-    <div class = "container">
-      <div class = "row">
-        <span id="logo" class = "span4">
-          <%= image_tag 'hn-logo.png', :width => '300', :class => 'logo'%>
-        </span>
-        <span id= "events" class = "span7 offset1">
-          <li id = "event-details">Next Event: </li>
-        </span>
-      </div>
-    </div>
-  </section>
-  <section id = "nav">
-         <div id = "navbar" class="navbar navbar-inverse" data-spy="affix">
-            <div class="navbar-inner">
-                <div class="container">
-                    <ul class="nav">
-                        <li><%=link_to '日本語', '#jp'%></li>
-                        <li><%=link_to 'Home', '#' %></li>
-                        <li><%=link_to 'Photos', '#photos' %></li>
-                        <li><%=link_to 'Videos', '#videos' %></li>
-                        <li><%=link_to 'Contact', 'mailto:hello@hnkansai.org' %></li>
-                    </ul>
-                <div class="social pull-right">
-                  <li class = 'social-icon'><%= link_to image_tag('facebook.png'), 'http://facebook.com/hnkansai' %></li>
-                  <li class = 'social-icon'><%= link_to image_tag('twitter.png'), 'http://twitter.com/hnkansai' %></li>
-                  <li class = 'social-icon'><%= link_to image_tag('flickr.png'), 'http://flickr.com/hnkansai' %></li>
-                  <li class = 'social-icon'><%= link_to image_tag('youtube.png'), 'http://www.youtube.com/channel/UCbxKJC9zZJ9C7YDYuZ3m59Q' %></li>
-                </div>
-            </div>
-        </div>
-      </div>
-  </section>
+  <%= partial 'partials/header' %>
+
   <section id = "welcome">
     <div class = "container">
       <div class = "row">
         <span id = "about" class = "span6 offset3">
-            <p>
+            <p class = 'en'>
               HNKansai is a meetup based around <%= link_to 'Hacker News', 'http://news.ycombinator.com' %>.
               Every month, we get together in Kyoto, Osaka, or Kobe to talk about technology, design, games, and startups. Come join us!
+            </p>
+            <p class = 'jp'>
+              HNKansaiとは <%=link_to 'ハッカーニュース', 'http://news.ycombinator.com' %> 関西読者のオフ会です。 毎月関西周辺で、技術、デザイン、ゲームやスタートアップなどの話をするためのミーティング・交流会を行います。HN関西に是非ご参加ください！
             </p>
         </span>
       </div>
         <div class = "row">
           <span id="newsletter" class = "span6 offset3">
-              <p> Sign up to be notified about upcoming events and other news.</p>
+              <p class = "en"> Sign up to be notified about upcoming events and other news.</p>
+              <p class = "jp"> ニュースレター</p>
               <!-- Begin MailChimp Signup Form -->
               <div id="mc_embed_signup">
               <form action="http://fajitanachos.us6.list-manage.com/subscribe/post?u=2ab6d042c537ad6da617f47a3&amp;id=aefb12e09b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 
                 <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email Address" required>
+
                 <div class="clear">
                   <input type="submit" value="Sign Up" name="subscribe" id="mc-embedded-subscribe" class="button">
                 </div>
@@ -66,7 +40,8 @@ title: Hacker News Kansai
     <section id = "videos">
     <div class = "container">
       <div class = "row">
-         <h2>Videos</h2>
+         <h2 class = "en">Videos</h2>
+         <h2 class = "jp">ビデオ</h2>
           <div id="player">
           </div>
         </div>
@@ -76,7 +51,8 @@ title: Hacker News Kansai
   <section id = "photos">
     <div class = "container">
       <div class = "row">
-        <h2> Photos </h2>
+        <h2 class = "en"> Photos </h2>
+        <h2 class = "jp">写真</h2>
         <div id = "galleries">
       </div>
     </div>
@@ -85,7 +61,8 @@ title: Hacker News Kansai
   <section id = "organizers">
     <div class = "container">
       <div class = "row">
-      <h2>Organizers</h2>
+      <h2 class = "en">Organizers</h2>
+      <h2 class = "jp">主催者</h2>
       <span id = "sacha" class = "organizer">
         <%= image_tag 'sacha.jpg', :class => 'profile-pic'  %>
         <div class = "caption">
@@ -115,16 +92,7 @@ title: Hacker News Kansai
      </div>
     </div>
   </section>
- 
-  <section id = "footer">
-    <div id = "credits" class = "container">
-      <div id = "copyright">
-            Copyright &copy; <%= Time.now.year %> Hacker News Kansai 
-      </div>
-      <div id = "created">
-            Created by <%= link_to 'FajitaNachos', 'http://fajitanachos.com' %>
-      </div>
-    </div>
-  </section>
+
+   <%= partial 'partials/footer' %>
 
 </div>
