Update video carousel

--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -244,6 +244,8 @@ section {
   overflow-y:hidden; 
   padding-top:10px;
   margin-top:2em;
+  border-top:1px solid #ccc;
+  border-bottom:1px solid #ccc;
 }
 
 
