Update organizer image dimensions

--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -339,8 +339,8 @@ section {
   margin-right: 0 !important;
 }
 .organizer img{
-  width:100%;
-  height:100%;
+  width:310px;
+  height:206px;
   display:block;
 }
 
