Update header background image

--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -37,8 +37,8 @@ section {
 }
 
 #header, #footer {
-  background: #3a3531 url('/images/hnk-pattern.png');
-  background-size:88px 100px;
+  background: #3a3531 url('/images/bg-header.png');
+  background-size:10px 10px;
   padding: 1.2em 0;
   min-width:982px;
 }
