Upgrade to Bootstrap 3

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -6,7 +6,7 @@ title: Hacker News Kansai
   <section id = "welcome">
     <div class = "container">
       <div class = "row">
-        <span id = "about" class = "span6 offset3">
+        <span id = "about" class = "col-md-6 col-md-offset-3">
             <p class = 'en'>
               HNKansai is a meetup based around <%= link_to 'Hacker News', 'http://news.ycombinator.com' %>.
               Every month, we get together in Kyoto, Osaka, or Kobe to talk about technology, design, games, and startups. Come join us!
@@ -17,7 +17,7 @@ title: Hacker News Kansai
         </span>
       </div>
         <div class = "row">
-          <span id="newsletter" class = "span6 offset3">
+          <span id="newsletter" class = "col-md-6 col-md-offset-3">
               <p class = "en"> Sign up to be notified about upcoming events and other news.</p>
               <p class = "jp"> ニュースレター</p>
                  <!-- Begin MailChimp Signup Form -->
@@ -59,7 +59,7 @@ title: Hacker News Kansai
       <div class = "row">
       <h2 class = "en">Organizers</h2>
       <h2 class = "jp">主催者</h2>
-      <span id = "sacha" class = "organizer">
+      <span id = "sacha" class = "organizer col-md-4">
         <%= image_tag 'sacha.jpg', :class => 'profile-pic'  %>
         <div class = "caption">
           <h3>Sacha Greif </h3>
@@ -68,7 +68,7 @@ title: Hacker News Kansai
         </div>
       </span>
 
-      <span id = "raphael" class = "organizer">
+      <span id = "raphael" class = "organizer col-md-4">
         <%= image_tag 'raphael.jpg', :class => 'profile-pic'  %>
        <div class = "caption">
           <h3>Raphael Guyot </h3>
@@ -77,7 +77,7 @@ title: Hacker News Kansai
         </div>
       </span>
       
-      <span id ="paco" class = "organizer">
+      <span id ="paco" class = "organizer col-md-4">
         <%= image_tag 'paco.jpg', :class => 'profile-pic'  %>
         <div class = "caption">
           <h3>Francisco 'Paco' Alcantara</h3>
