Fix caption overlays

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -59,32 +59,32 @@ title: Hacker News Kansai
       <div class = "row">
       <h2 class = "en">Organizers</h2>
       <h2 class = "jp">主催者</h2>
-      <span id = "sacha" class = "organizer col-md-4">
+      <div id = "sacha" class = "organizer col-md-4">
         <%= image_tag 'sacha.jpg', :class => 'profile-pic'  %>
         <div class = "caption">
           <h3>Sacha Greif </h3>
           <li><a href="https://twitter.com/SachaGreif">@SachaGreif</a></li>
           <li><a href="http://sachagreif.com">http://sachagreif.com</a></li>
         </div>
-      </span>
+      </div>
 
-      <span id = "raphael" class = "organizer col-md-4">
+      <div id = "raphael" class = "organizer col-md-4">
         <%= image_tag 'raphael.jpg', :class => 'profile-pic'  %>
        <div class = "caption">
           <h3>Raphael Guyot </h3>
           <li><a href="https://twitter.com/sanqualis">@sanqualis</a></li>
           <li><a href="http://sanqualis.com">http://sanqualis.com</a></li>
         </div>
-      </span>
+      </div>
       
-      <span id ="paco" class = "organizer col-md-4">
+      <div id ="paco" class = "organizer col-md-4">
         <%= image_tag 'paco.jpg', :class => 'profile-pic'  %>
         <div class = "caption">
           <h3>Francisco 'Paco' Alcantara</h3>
           <li><a href="https://twitter.com/pacoalcantara">@PacoAlcantara</a></li>
           <li><a href="http://www.flickr.com/photos/fotopakismo/">Flickr</a></li>
         </div>
-      </span>
+      </div>
      </div>
     </div>
   </section>
