--- a/source/partials/_header.erb
+++ b/source/partials/_header.erb
@@ -2,7 +2,7 @@
     <div class = "container">
       <div class = "row">
         <span id="logo" class = "col-md-4">
-          <%= image_tag 'hn-logo.png', :width => '300', :class => 'logo'%>
+          <%= image_tag 'hn-logo.png', :class => 'logo'%>
         </span>
         <span id= "events" class = "col-md-7 col-md-offset-1">
         </span>
