--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,8 +5,7 @@ title: Hacker News Kansai
 
   <section id = "welcome">
     <div class = "container">
-      <div class = "row">
-        <span id = "about" class = "col-md-6 col-md-offset-3">
+        <span id = "about" class = "col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
             <p class = 'en'>
               HNKansai is a meetup based around <%= link_to 'Hacker News', 'http://news.ycombinator.com' %>.
               Every month, we get together in Kyoto, Osaka, or Kobe to talk about technology, design, games, and startups. Come join us!
@@ -15,9 +14,7 @@ title: Hacker News Kansai
               HNKansaiとは <%=link_to 'ハッカーニュース', 'http://news.ycombinator.com' %> 関西読者のオフ会です。 毎月関西周辺で、技術、デザイン、ゲームやスタートアップなどの話をするためのミーティング・交流会を行います。HN関西に是非ご参加ください！
             </p>
         </span>
-      </div>
-        <div class = "row">
-          <span id="newsletter" class = "col-md-6 col-md-offset-3">
+          <span id="newsletter" class = "col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
               <p class = "en"> Sign up to be notified about upcoming events and other news.</p>
               <p class = "jp"> ニュースレター</p>
                  <!-- Begin MailChimp Signup Form -->
@@ -29,24 +26,20 @@ title: Hacker News Kansai
                 </div>
                 <!--End mc_embed_signup-->
           </span>
-        </div>
       </div>
   </section>
 
     <section id = "videos">
     <div class = "container">
-      <div class = "row">
          <h2 class = "en">Videos</h2>
          <h2 class = "jp">ビデオ</h2>
           <div id="player">
           </div>
-        </div>
     </div>
   </section>
 
   <section id = "photos">
     <div class = "container">
-      <div class = "row">
         <h2 class = "en"> Photos </h2>
         <h2 class = "jp">写真</h2>
         <div id = "galleries">
@@ -56,10 +49,9 @@ title: Hacker News Kansai
 
   <section id = "organizers">
     <div class = "container">
-      <div class = "row">
       <h2 class = "en">Organizers</h2>
       <h2 class = "jp">主催者</h2>
-      <div id = "sacha" class = "organizer col-md-4">
+      <div id = "sacha" class = "organizer col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2">
         <%= image_tag 'sacha.jpg', :class => 'profile-pic'  %>
         <div class = "caption">
           <h3>Sacha Greif </h3>
@@ -68,7 +60,7 @@ title: Hacker News Kansai
         </div>
       </div>
 
-      <div id = "raphael" class = "organizer col-md-4">
+      <div id = "raphael" class = "organizer col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2">
         <%= image_tag 'raphael.jpg', :class => 'profile-pic'  %>
        <div class = "caption">
           <h3>Raphael Guyot </h3>
@@ -77,7 +69,7 @@ title: Hacker News Kansai
         </div>
       </div>
       
-      <div id ="paco" class = "organizer col-md-4">
+      <div id ="paco" class = "organizer col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2">
         <%= image_tag 'paco.jpg', :class => 'profile-pic'  %>
         <div class = "caption">
           <h3>Francisco 'Paco' Alcantara</h3>
@@ -85,7 +77,6 @@ title: Hacker News Kansai
           <li><a href="http://www.flickr.com/photos/fotopakismo/">Flickr</a></li>
         </div>
       </div>
-     </div>
     </div>
   </section>
 
