--- a/source/partials/_header.erb
+++ b/source/partials/_header.erb
@@ -1,17 +1,16 @@
   <section id = "header">
     <div class = "container">
-      <div class = "row">
-        <span id="logo" class = "col-md-4">
+        <div id="logo" class = "col-md-5 col-xs-12">
           <%= image_tag 'hn-logo.png', :class => 'logo'%>
-        </span>
-        <span id= "events" class = "col-md-7 col-md-offset-1">
-        </span>
-      </div>
+        </div>
+        <div id= "events" class = "col-md-7 col-md-offset-1 col-xs-12">
+        </div>
     </div>
   </section>
   <section id = "nav">
          <div id = "navbar" class="navbar navbar-inverse" data-spy="affix">
                 <div class="container">
+                  
                   <div class = "collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li class = "en language"><%=link_to '日本語', '#jp', :id => 'english'%></li>
