--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -29,7 +29,7 @@ section {
 }
 
 img {
-  display:inline-block;
+  display:block;
   width:100% !important;
   height:auto;
 }
@@ -39,7 +39,7 @@ img {
 }
 
 .container {
-  max-width:940px;
+  
 }
 
 .lower {
@@ -62,18 +62,16 @@ img {
 #logo {
   margin-left:0;
   max-width:300px;
+  margin:auto;
 }
 
-.logo {
-  max-width:300px;
-}
 
 .caption {
   position:absolute;
   display:block;
   top:0;
-  left:15px;
-  right:15px;
+  left:10px;
+  right:10px;
   bottom:0;
   display:none;
   background-color: rgba(0,0,0,.75);  
@@ -89,7 +87,7 @@ img {
   color:#fff;
   text-align:center;
   text-shadow:1px 1px 1px #222;
-  padding-top:2em;
+  padding-top:15%;
   font-size:1.5em;
 }
 
@@ -128,16 +126,20 @@ img {
     width: 100%;
     top:0;
     z-index: 5;
-      border-radius:0;
-  moz-border-radius:0;
-  -webkit-border-radius:0;
+    border-radius:0;
+    moz-border-radius:0;
+    -webkit-border-radius:0;
 } 
+
+.navbar-collapse {
+  padding-left:0;
+}
 
 .social-icon {
   display:inline-block;
   padding-right:20px;
   opacity:.4;
-  padding: 9px 0px;
+  padding: 7px 0 6px 0px;
 }
 
 .social-icon:hover{
@@ -145,7 +147,8 @@ img {
 }
 
 #events {
-  margin-top:40px;
+  margin-top:35px;
+  text-align:center;
   h3 {
     display:inline;
   }
@@ -179,15 +182,11 @@ img {
 /*Welcome*/
 
 #welcome .container {
+  padding:2em 0;
   border-bottom:1px solid #ccc;
 }
 
-#welcome .row {
-  margin-left: -20px;
-}
-
 #about{
-  padding-top:10px;
   font-size:1.25em;
   line-height:1.5em;
   text-align:center;
@@ -204,11 +203,6 @@ img {
 /*Photos*/
 
 
-#photos{
-  h2 {
-    padding: .5em 0 .5em 0;
-  }
-}
 
 #galleries {
   h3{
@@ -225,8 +219,10 @@ img {
 
 .gallery-img {
   position:relative;
-  overflow:auto;;
-  margin-bottom:30px;
+  overflow:hidden;
+  margin-bottom:20px;
+  padding:0 10px;
+
   .caption {
     pointer-events:none;
   }
@@ -244,7 +240,7 @@ img {
 }
 
 #player {
-  width:100%;
+  height:100%;
   position: relative;
   margin:auto;
 }
@@ -290,8 +286,11 @@ img {
 
 .player {
   display:block;
-  width: 100%;
-  height: 450px;  
+  width:100%;
+  height:100%;
+  max-width:960px; 
+  max-height:540px; 
+  margin:auto; 
   overflow: auto;
   border:1px solid #444;
   box-shadow: 2px 2px 8px #888;
@@ -313,6 +312,7 @@ img {
 
 .video-details{
  width:80%;
+ max-width:960px;
  margin:auto;
  padding:1em;
  text-align:center;
@@ -327,7 +327,11 @@ img {
   position:relative;
   cursor:pointer;
   overflow:auto;
-   margin-bottom:30px;
+  margin-bottom:30px;
+    .caption{
+      left:15px;
+      right:15px;
+    }
     .caption li{
       list-style-type: none;
       text-align:center;
@@ -344,10 +348,9 @@ img {
     img{
       display:block;
       border:1px solid #aaa;
-      box-shadow:1px 1px 8px #aaa;
+       box-shadow:1px 1px 8px #aaa;
       -webkit-box-shadow:1px 1px 8px #aaa;
       -mozkit-box-shadow:1px 1px 8px #aaa;
-
     }
 }
 
@@ -409,3 +412,10 @@ text-align:center
 .sqs-center{
   top:5% !important;
 }
+
+//Bootstrap media queries
+
+/* Medium devices (desktops, 992px and up) */
+
+
+
