Fix 100% height in Firefox

--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -5,7 +5,9 @@
 .row {
   margin-left:0;
 }
-
+html,body {
+  height:100%;
+}
 body {
   font-family: "Bitter", "Arial", sans-serif; 
   color: rgba(0, 0, 0, .7);
