--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -246,6 +246,25 @@ img {
   position: relative;
   margin:auto;
 }
+.video-container {
+    position: relative;
+    max-width:960px;
+    margin:auto;
+    padding-bottom: 56.25%;
+    height: 0;
+}
+ 
+.video-container iframe,
+.video-container object,
+.video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
 
 .carousel-wrap{
   width:100%;
@@ -287,11 +306,7 @@ img {
 }
 
 .player {
-  display:block;
-  width:100%;
-  height:100%;
-  max-width:960px; 
-  max-height:540px; 
+  display:block; 
   margin:auto; 
   overflow: auto;
   border:1px solid #444;
