--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -2,6 +2,10 @@
 
 @charset "utf-8";
 
+textarea:focus, input:focus{
+    outline: 0;
+}
+
 .row {
   margin-left:0;
 }
@@ -11,6 +15,7 @@ html,body {
 body {
   font-family: "Bitter", "Arial", sans-serif; 
   color: rgba(0, 0, 0, .7);
+  background-color:#f9f9f9;
 }
 
 section {
@@ -55,10 +60,6 @@ img {
   background: #3a3531 url('/images/bg-header.png');
   background-size:10px 10px;
   padding: 1.2em 0;
-}
-
-#welcome, #photos, #videos, #organizers{
-  background-color:#fff;
 }
 
 #logo {
