Fix fancybox scrolling to the top on image click

--- a/source/stylesheets/fancybox.scss
+++ b/source/stylesheets/fancybox.scss
@@ -172,7 +172,7 @@
 /* Overlay helper */
 
 .fancybox-lock {
-    overflow: hidden !important;
+    overflow: visible !important;
     width: auto;
 }
 
