--- a/source/partials/_header.erb
+++ b/source/partials/_header.erb
@@ -25,7 +25,7 @@
                         <li class = "jp nav-link"><%=link_to '連絡', 'mailto:hello@hnkansai.org' %></li>
                     </ul>
                 <div class="social pull-right">
-                  <li class = 'social-icon'><%= link_to image_tag('facebook.png'), 'http://facebook.com/hnkansai' %></li>
+                  <li class = 'social-icon'><%= link_to image_tag('facebook.png'), 'http://facebook.com/groups/hnkansai' %></li>
                   <li class = 'social-icon'><%= link_to image_tag('twitter.png'), 'http://twitter.com/hnkansai' %></li>
                   <li class = 'social-icon'><%= link_to image_tag('flickr.png'), 'http://flickr.com/hnkansai' %></li>
                   <li class = 'social-icon'><%= link_to image_tag('youtube.png'), 'http://www.youtube.com/channel/UCbxKJC9zZJ9C7YDYuZ3m59Q' %></li>
