--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -225,7 +225,7 @@ img {
   overflow:hidden;
   margin-bottom:20px;
   padding:0 10px;
-
+  max-height: 240px;
   .caption {
     pointer-events:none;
   }
