HTTPS relevant links (on index.html)
HTTPS relevant links (on index.html.erb) - will save on HTTP redirects

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,7 +7,7 @@ title: Hacker News Kansai
     <div class = "container">
         <span id = "about" class = "col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
             <p class = 'en'>
-              HNKansai is a meetup based around <%= link_to 'Hacker News', 'http://news.ycombinator.com' %>.
+              HNKansai is a meetup based around <%= link_to 'Hacker News', 'https://news.ycombinator.com' %>.
               Every month, we get together in Kyoto, Osaka, or Kobe to talk about technology, design, games, and startups. Come join us!
             </p>
             <p class = 'jp'>
@@ -74,7 +74,7 @@ title: Hacker News Kansai
         <div class = "caption">
           <h3>Francisco 'Paco' Alcantara</h3>
           <li><a href="https://twitter.com/pacoalcantara">@PacoAlcantara</a></li>
-          <li><a href="http://www.flickr.com/photos/fotopakismo/">Flickr</a></li>
+          <li><a href="https://www.flickr.com/photos/fotopakismo/">Flickr</a></li>
         </div>
       </div>
     </div>
