--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -11,7 +11,7 @@ title: Hacker News Kansai
               Every month, we get together in Kyoto, Osaka, or Kobe to talk about technology, design, games, and startups. Come join us!
             </p>
             <p class = 'jp'>
-              HNKansaiとは <%=link_to 'ハッカーニュース', 'http://news.ycombinator.com' %> 関西読者のオフ会です。 毎月関西周辺で、技術、デザイン、ゲームやスタートアップなどの話をするためのミーティング・交流会を行います。HN関西に是非ご参加ください！
+              HNKansaiとは <%=link_to 'ハッカーニュース', 'https://news.ycombinator.com' %> 関西読者のオフ会です。 毎月関西周辺で、技術、デザイン、ゲームやスタートアップなどの話をするためのミーティング・交流会を行います。HN関西に是非ご参加ください！
             </p>
         </span>
           <span id="newsletter" class = "col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
@@ -20,7 +20,7 @@ title: Hacker News Kansai
               <!-- Begin MailChimp Signup Form -->
               <div id="mc_embed_signup">
                 <form action="http://hnkansai.us7.list-manage.com/subscribe/post?u=491fac1e90fe1caaf30a86e62&amp;id=6221c3d7b1" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                  <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email Address" required>
+                  <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" autocomplete="email" placeholder="Email Address" required>
                   <div class="clear"><input type="submit" value="Sign Up" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
                 </form>
               </div>
