Use HTTPS on all external files, embeds, and API calls.

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -5,10 +5,10 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <link href="https://fonts.googleapis.com/css?family=Bitter:400,700,400italic" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet" type="text/css">
-    <link href="http://cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+    <link href="https://cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js" ></script>
-    <script src="//squaresend.com/squaresend.js"></script>  
+    <script src="https://squaresend.com/squaresend.js"></script>
     <title>Hacker News Kansai</title>
     <meta name="description" content="HNKansai is a meetup based around Hacker News. Every month, we get together in Kyoto, Osaka, or Kobe to talk about technology, design, games, and startups">
     <%= stylesheet_link_tag "normalize", "all"%>
